fix youtube section on mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -855,6 +855,15 @@
     h3 {
       font-size: 1.25rem;
     }
+    .custom-min-height {
+      min-height: auto;
+      .video {
+        border-radius: 15px;
+      }
+      .yt-icon {
+        display: none;
+      }
+    }
   }
 
   .single-post-container {
